# atmega-z80

./: .gitignore  CMakeLists.txt  LICENSE  README.md
schema/: .gitignore  atmega-z80-A3.sch-bak  atmega-z80-cache.lib  atmega-z80.kicad_pcb  atmega-z80.pro  atmega-z80.sch  atmega-z80.sch-bak  fp-info-cache  fp-lib-table
schema/atmega-z80.pretty/: USB_Mini-B_Molex-54819-0519.kicad_mod  goose-icon.kicad_mod
src/: CMakeLists.txt
src/atmega/: CMakeLists.txt  Makefile  README.md  backup.c  blinky.c  common.h  lib_usart.c  lib_usart.h  main.c  setup.bat  z80_prog_loader.c
src/console/: README.md  console.py  mcp2221.py  program_hwid.py  test_atmega_z80.py  usbconnector.py  z80_prog_loader.py
src/z80/: CMakeLists.txt  README.md  blinky.asm  bootloader.asm  hello.asm
